Correct contrast pt2

--- a/src/assets/sass/modules/jquery-ui/_slider.scss
+++ b/src/assets/sass/modules/jquery-ui/_slider.scss
@@ -37,7 +37,7 @@
         box-sizing: border-box;
         width: 20px;
         height: 20px;
-        border: 1px solid var(--color-border-dark);
+        border: 1px solid var(--color-border-extra-dark);
         border-radius: 50%;
 
         @if setup.$flat-theme < 1 {
